Change io grader url and use full path for java and javac commands